# CheckID

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  face_detection.py  google_storage.py  index.html  main.py  my_script_php.php  pyproject.toml  requirements.txt  test.py
docs/: v1.json  v2.json
home/: __init__.py  index.html  index.php  route.py
models/: v2.py
modules/: base64_to_numpy.py  compare_face.py  extract_text.py  face_compare.py  face_detection.py  file_handler.py  func_detection.py  google_storage.py  save_files.py  text_detection.py  text_detection_google.py
routers/: home.py  v1.py  v2.py
templates/: index.html
uploads/: __init__.py  info.json  logic.py  route.py
