[project]
name = "checkid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "face-recognition>=1.3.0",
    "face-recognition-models>=0.3.0",
    "fastapi>=0.115.11",
    "python-multipart>=0.0.20",
    "setuptools>=76.1.0",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
