[project]
name = "checkid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "face-recognition>=1.3.0",
    "face-recognition-models>=0.3.0",
    "fastapi>=0.115.11",
    "google-cloud-vision>=3.10.2",
    "python-multipart>=0.0.20",
    "setuptools>=76.1.0",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
